# sqlx-playground

./: Cargo.toml
migrations/: 0001_base.sql
src/: db.rs  image_helpers.rs  main.rs
src/fixtures/: exif.sql  image.sql  iptc.sql  library_file.sql  tag.sql
