[package]
name = "sqlx-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio", "migrate"] }
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4.38"
rexiv2 = "0.10.0"
